Public sync from bs-client main

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,22 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "biguasim"
 version = "1.0.0"
-description = "Autonomous Underwater Vehicle Simulator"
+description = "Hybrid aerial-water Vehicle Simulator"
 readme = { file = "README.md", content-type = "text/markdown" }
 authors = [
-    { name = "Easton Potokar" },
-    { name = "Spencer Ashford" },
-    { name = "BYU FRoSt & PCCL Labs", email = "contagon@byu.edu" }
+    { name = "Matheus G. Mateus" },
+    { name = "Henrique Reichow" },
+    { name = "NAUTEC", email = "nateucgestao@gmail.com" }
 ]
 license = { text = "MIT License" }
 requires-python = ">=3.10"
 dependencies = [
-    "numpy<=1.26.4",
-    "scipy",
+    # Core
     'posix_ipc >= 1.0.0; platform_system == "Linux"',
+    "numpy>=1.26.4",
+    "typing-extensions>=4.12",
+    # Testing / Dev
+    "pytest==8.3.5",
 ]
 
 [project.urls]
